Footer no longer overlaps page content

--- a/JampotCapstoneWebApp/JampotCapstone/wwwroot/css/site.css
+++ b/JampotCapstoneWebApp/JampotCapstone/wwwroot/css/site.css
@@ -125,12 +125,12 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 20px;
-  background-color: black;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 20px;
+    background-color: black;
 }
 
 .title {
